# server/api/Services/Interfaces/IMovieService.cs
@@ -11,8 +11,8 @@ public interface IMovieService
     Task AddMovieToUser(string userId, string movieId);
     Task<Movie> EditMovie(Movie movie);
     Task<Movie> CreateMovie(CreateMovieDto movieDto, string userId, List<Genre> genres, int? rating = null);
-    Task UpdateMovieRating(string userId, string movieId, int rating);
-    Task<int?> GetMovieRatingByUser(string userId, string movieId);
+    Task UpdateMovieRating(string userId, string movieId, int rating, string? comment);
+    Task<ratingDto?> GetMovieRatingByUser(string userId, string movieId);
     Task<Movie?> AddMovieToSeen(string movieId, string userId, Boolean seen);
     Task<List<Genre>> GetMovieGenres(string movieId);
     Task UpdateMovieGenres(string movieId, List<Genre> genres);
