# server/api/openapi-with-docs.json
@@ -312,6 +312,15 @@
               "format": "int32"
             },
             "x-position": 3
+          },
+          {
+            "name": "comment",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 4
           }
         ],
         "responses": {
@@ -359,8 +368,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "integer",
-                  "format": "int32"
+                  "$ref": "#/components/schemas/RatingDto"
                 }
               }
             }
@@ -906,6 +914,21 @@
           "rating": {
             "type": "integer",
             "format": "int32",
+            "nullable": true
+          }
+        }
+      },
+      "RatingDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "rating": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "comment": {
+            "type": "string",
             "nullable": true
           }
         }
